fixtures/errors/for_in_bad_lhs.js
for ([x] in "ab") {
  console.log(x);
}
