fixtures/errors/for_in_bad_lhs.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: undeclared identifier `x`
 --> errors/for_in_bad_lhs.js:1:7
1 | for ([x] in "ab") {
  |       ^

